--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/burger.html">Burger</a>
-    <a href="./recipes/pizza.html">Pizza</a>
+    <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+    <li></li><a href="./recipes/burger.html">Burger</a></li>
+    <li></li><a href="./recipes/pizza.html">Pizza</a></li>
     </ul>
 </body>
 </html>
