--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./main_image.jpeg">
     <ul>
-    <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-    <li></li><a href="./recipes/burger.html">Burger</a></li>
-    <li></li><a href="./recipes/pizza.html">Pizza</a></li>
+    <li><a href="./recipes/lasagna.html">Lasagna</a></li><br>
+    <li><a href="./recipes/burger.html">Burger</a></li><br>
+    <li><a href="./recipes/pizza.html">Pizza</a></li><br>
     </ul>
 </body>
 </html>
