Addes images to lists

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 <body>
     <h1>Odin Recipes</h1>
     <img src="./main_image.jpeg">
-    <ul>
-    <li><a href="./recipes/lasagna.html">Lasagna</a></li><br>
-    <li><a href="./recipes/burger.html">Burger</a></li><br>
-    <li><a href="./recipes/pizza.html">Pizza</a></li><br>
-    </ul>
+    <p>
+        Welcome to my page, where you learn about different recipes. Today, we'll learn about three different meals.
+    </p>
+    <p>
+        They are Lasagna, Burger, Pizza.
+    </p>
+    <div>
+        <ul>
+            <li><a href="./recipes/lasagna.html"><img class="lasagna" src="./recipes/Lasagna">Lasagna</a></li><br>
+            <li><a href="./recipes/burger.html"><img class=""  src="./recipes/burger.jpeg">Burger</a></li><br>
+            <li><a href="./recipes/pizza.html"><img src="./recipes/Pizza.jpeg">Pizza</a></li><br>
+        </ul>
+    </div>
 </body>
 </html>
